objects/copado__Function__c.object
<CustomObject>
    <description>A function is a script that contains a series of commands and can be executed from Copado.</description>
    <fields>
        <fullName>copado__API_Name__c</fullName>
        <description>Provide a unique API name.</description>
        <externalId>true</externalId>
        <inlineHelpText>Provide a unique API name.</inlineHelpText>
        <label>API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__ApexClass__c</fullName>
        <description>The name of the Apex class which is executed after the function has run.</description>
        <inlineHelpText>Name of the Apex Class. The class must implement the MCCallBack interface.</inlineHelpText>
        <label>ApexClass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Callback_Type__c</fullName>
        <description>Type of Callback selected for the function.</description>
        <inlineHelpText>Type of Callback selected for the function.</inlineHelpText>
        <label>Callback Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ApexClass</fullName>
                </value>
                <value>
                    <fullName>Flow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Description__c</fullName>
        <description>Description of the function.</description>
        <inlineHelpText>Description of the function.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__FlowHandler__c</fullName>
        <description>Handler format: FlowAPIName</description>
        <inlineHelpText>Handler format: FlowAPIName</inlineHelpText>
        <label>FlowHandler</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Image_Name__c</fullName>
        <defaultValue>&quot;copado-function-core:v1&quot;</defaultValue>
        <description>Name of the Image required to run the function.</description>
        <inlineHelpText>Name of the docker image provided by Copado. Check our documentation site to find all available images.</inlineHelpText>
        <label>Image Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Options__c</fullName>
        <description>User can define few options like maxVolume and volumeTTL which can be used to run standalone function with these configurations</description>
        <inlineHelpText>Define the maxVolume and volumeTTL to be used to run a standalone function with these configurations.</inlineHelpText>
        <label>Options</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Parameters__c</fullName>
        <description>A parameter is a piece of information taken from outside the function that the function needs to be executed.</description>
        <inlineHelpText>This is used to validate if all required parameters are set before calling the execution.</inlineHelpText>
        <label>Parameters</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Result_Viewer_Component__c</fullName>
        <inlineHelpText>This is the name of the lightning component that you want to render on the related result record. The name must be in the namespace:componentName format.</inlineHelpText>
        <label>Result Viewer Component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Script__c</fullName>
        <description>Provide the script with the commands you would like the function to execute.</description>
        <inlineHelpText>Provide the script with the commands you would like the function to execute.</inlineHelpText>
        <label>Script</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Timeout__c</fullName>
        <description>The number of minutes after which the function will automatically finish if it doesn&apos;t finish before.</description>
        <inlineHelpText>The number of minutes after which the function will finish automatically and fail if it doesn&apos;t finish before the given timeout.</inlineHelpText>
        <label>Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Type__c</fullName>
        <defaultValue>&quot;Custom&quot;</defaultValue>
        <description>The type of Copado function such as Custom or Standard.</description>
        <inlineHelpText>Type of Copado function.</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                    <default>true</default>
                    <label>Custom</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Version__c</fullName>
        <description>The version of the function being executed.</description>
        <inlineHelpText>Version of the function.</inlineHelpText>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Worker_Size__c</fullName>
        <description>Picklist field that defines the size of the worker. The available options are S, M, L, and XL.</description>
        <inlineHelpText>Picklist field that defines the size of the worker. The available options are S, M, L, and XL.</inlineHelpText>
        <label>Worker Size</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>S</fullName>
                    <default>true</default>
                    <label>S</label>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>XL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Function</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Type__c</columns>
        <columns>copado__Description__c</columns>
        <columns>copado__API_Name__c</columns>
        <columns>copado__Image_Name__c</columns>
        <columns>copado__Callback_Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Function Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Functions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>copado__Function_Name_must_Be_Alpha_Numeric</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX( copado__API_Name__c ,&apos;[a-zA-Z_][a-zA-Z0-9_]*&apos;))</errorConditionFormula>
        <errorDisplayField>copado__API_Name__c</errorDisplayField>
        <errorMessage>Api name can only contain alphanumeric characters and must begin with a letter</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Script_must_contain_a_value</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISNEW()),
ISBLANK(TRIM(copado__Script__c))
)</errorConditionFormula>
        <errorMessage>Script cannot be empty.</errorMessage>
    </validationRules>
</CustomObject>